--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   pretty_dio_logger: ^1.4.0
-  retrofit: ^4.6.0
+  retrofit: ^4.9.0
   flutter_bloc: ^9.1.1
   device_preview: ^1.1.0
+  shared_preferences: ^2.5.3
+  connectivity_plus: ^7.0.0
   flutter_localizations:
     sdk: flutter
   intl: any
 
 dev_dependencies:
-  build_runner: ^2.5.4
-  retrofit_generator: ^9.7.0
+  build_runner: ^2.6.0
+  retrofit_generator: ^10.0.1
   flutter_test:
     sdk: flutter
 
