--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  carousel_slider: ^5.1.1
+  animated_toggle_switch: ^0.8.5
 
 dev_dependencies:
   build_runner: ^2.5.4
