--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: any
   carousel_slider: ^5.1.1
   animated_toggle_switch: ^0.8.5
+  icons_plus: ^5.0.0
 
 dev_dependencies:
   build_runner: ^2.6.0
