--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   carousel_slider: ^5.1.1
   animated_toggle_switch: ^0.8.5
   icons_plus: ^5.0.0
+  google_sign_in: ^7.2.0
+  firebase_auth: ^6.1.0
+  firebase_core: ^4.1.1
 
 dev_dependencies:
   build_runner: ^2.6.0
