--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   google_sign_in: ^7.2.0
   firebase_auth: ^6.1.0
   firebase_core: ^4.1.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   build_runner: ^2.6.0
