--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,10 +51,15 @@ dependencies:
   firebase_auth: ^6.1.0
   firebase_core: ^4.1.1
   cached_network_image: ^3.4.1
+  webview_flutter: ^4.13.0
+  injectable:
+  get_it:
+
 
 dev_dependencies:
-  build_runner: ^2.6.0
+  build_runner:
   retrofit_generator: ^10.0.1
+  injectable_generator:
   flutter_test:
     sdk: flutter
 
