--- a/fluuter_native_splash.yaml
+++ b/fluuter_native_splash.yaml
@@ -3,12 +3,19 @@ flutter_native_splash:
   image: assets/images/logo.png
   color_dark: "#121312"
   image_dark: assets/images/logo.png
+  branding_android: assets/images/branding.png
+  branding_dark_android: assets/images/branding.png
+  branding_ios: assets/images/branding.png
+  branding_dark_ios: assets/images/branding.png
+
 
   android_12:
     image: assets/images/logo_android_12.png
     color: "#121312"
     image_dark: assets/images/logo_android_12.png
     color_dark: "#121312"
+    branding: assets/images/branding.png
+    branding_dark: assets/images/branding.png
   android: true
   ios: true
   color_android: "#121312"
