--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   retrofit: ^4.9.0
   flutter_bloc: ^9.1.1
-  device_preview: ^1.1.0
-  shared_preferences: ^2.5.3
+  device_preview:
+  shared_preferences:
   connectivity_plus: ^7.0.0
   flutter_localizations:
     sdk: flutter
